# pointclound2cad

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  开发需求文档.md  技术架构与实现方案.md
src/: main.cpp
src/algorithm/: PointCloudProcessor.cpp  PointCloudProcessor.h
src/data/: DataManager.cpp  DataManager.h  IOManager.cpp  IOManager.h
src/ui/: MainWindow.cpp  MainWindow.h
src/visualization/: VisualizationWidget.cpp  VisualizationWidget.h
